# paper-mentat

./: .gitignore  README.md  academic-papers-reports.md  academic_paper_cli.py  academic_paper_framework.py  config.yaml  example_usage.py  machine_learning_geology_papers.txt  mineral_exploration_papers.txt  ollama_example.py  pyproject.toml  requirements.txt  test_framework.py
paper_mentat/: __init__.py  apis.py  cli.py  framework.py  llm.py  models.py
