[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "paper-mentat"
version = "0.1.0"
description = "Search, verify OA status, and retrieve open access academic papers"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0"]

[project.scripts]
paper-mentat = "paper_mentat.cli:main"
